haskell-migration/ebm-mars/build_v13.log
ebm-mars> configure (lib + exe)
Configuring ebm-mars-0.1.0.0...
ebm-mars> build (lib + exe) with ghc-9.4.8
Preprocessing library for ebm-mars-0.1.0.0..
Building library for ebm-mars-0.1.0.0..
[ 1 of 11] Compiling EBM.Types [Source file changed]

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/Types.hs:35:23: error:
    • A newtype constructor cannot have a strictness annotation,
        but ‘Temperature’ does
    • In the definition of data constructor ‘Temperature’
      In the newtype declaration for ‘Temperature’
   |
35 | newtype Temperature = Temperature { unTemperature :: !Double }
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/Types.hs:39:20: error:
    • A newtype constructor cannot have a strictness annotation,
        but ‘Pressure’ does
    • In the definition of data constructor ‘Pressure’
      In the newtype declaration for ‘Pressure’
   |
39 | newtype Pressure = Pressure { unPressure :: !Double }
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/Types.hs:43:16: error:
    • A newtype constructor cannot have a strictness annotation,
        but ‘Mass’ does
    • In the definition of data constructor ‘Mass’
      In the newtype declaration for ‘Mass’
   |
43 | newtype Mass = Mass { unMass :: !Double }
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/Types.hs:47:17: error:
    • A newtype constructor cannot have a strictness annotation,
        but ‘Angle’ does
    • In the definition of data constructor ‘Angle’
      In the newtype declaration for ‘Angle’
   |
47 | newtype Angle = Angle { unAngle :: !Double }
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/Types.hs:51:16: error:
    • A newtype constructor cannot have a strictness annotation,
        but ‘Time’ does
    • In the definition of data constructor ‘Time’
      In the newtype declaration for ‘Time’
   |
51 | newtype Time = Time { unTime :: !Double }
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the error:
       
       [S-7011]
       While building package ebm-mars-0.1.0.0 (scroll up to its section to see the error) using:
       /home/takeru/.stack/setup-exe-cache/x86_64-linux/Cabal-simple_w2MFVN35_3.8.1.0_ghc-9.4.8 --verbose=1 --builddir=.stack-work/dist/x86_64-linux/ghc-9.4.8 build lib:ebm-mars exe:ebm-mars-exe --ghc-options ""
       Process exited with code: ExitFailure 1 
